Slightly reduced content area width to avoid content shifting while browser zooming (LP #629577)

--- a/karl/views/static/themedstyles.css
+++ b/karl/views/static/themedstyles.css
@@ -560,7 +560,7 @@ a.chparent:hover {
 }
 .generic-layout #center,
 .community-layout #center {
-    width: 705px;
+    width: 704px;
 }
 #right {
  	float: right;
